src/styles/main.scss
/* ... */
.relatedArticles {
    padding-top: 0.5em;
    position: relative;
    padding-bottom: 1em;

    &:before {
        border-top: 1px solid;
        content: " ";
        position: absolute;
        left: 10%;
        top: 0px;
        right: 10%;
        opacity: 0.2;
    }

    h3 { opacity: 0.9; }
}
blockquote {
    background-color: $brandColor3;
    margin-left: 0px;
    margin-right: 0px;
    padding: 0.5em 1em;
    border-left: 0.5em solid darken($brandColor3, 10);
    font-style: italic;
}
.aboutMeImage {
    margin-left: auto;
    margin-right: auto;
    display: block;
    margin-top: 2rem;
    margin-bottom: 2rem;
    width: 230px;
    height: 230px;
    border: 1px solid hsl(0, 0%, 80%);
    border-radius: 230px;
    overflow: hidden;                       
}
.articleList {
    h1 {
        @include pageH1;
        margin-bottom: 3rem;
    }
    article {
        margin-bottom: 3rem;
    }
    .pagination {
        text-align: center;
        a {
            display: inline-block;
            vertical-align: middle;
            width: 2em;
            height: 2em;
            line-height: 2em;
            margin: 0px 0.25em;

            &:hover {
                background-color: hsl(0, 0%, 95%);
                border-radius: 3px;
            }
        }
    }
}

:root.darkMode {
    color: darken($brandColor3, 10%);
    background-color: darken($brandColor4, 15%);

    a[href] { color: $brandColor2; }

    .button, a.button {
        
        background-color: darken($brandColor4, 7.5%);
        border: 2px solid lighten($brandColor4, 7.5%);
        color: $brandColor3;
        padding: calc(0.35rem - 2px) calc(1.5rem - 2px);
    }
    
    @include mobileStyles {
        header nav .mobileMenuContainer {
            background-color: darken($brandColor4, 5%);
        }
    }
    nav a[href] { color: inherit; }
    nav a[href]:focus { color: $brandColor2; }
    #toggleDarkMode {
        &:focus { box-shadow: 0px 0px 3px 2px $brandColor2; }
        .innerDiv { left: calc(1.5rem); }
    }
    footer {
        border-top-color: darken($brandColor4, 10%);
    }

    
    #heroBanner {
        border-bottom: 3px solid lighten($brandColor4, 50%);

        background-color: darken($brandColor4, 7.5%);
        box-shadow: 0 0 0.5rem darken($brandColor4, 12.5%);
        color: darken($brandColor3, 10%);

        .newsletterForm .button {
            background-color: darken($brandColor1, 5%);
            border-color: lighten($brandColor1, 25%);
        }
    }
    .featuredArticles {
        background-color: darken($brandColor4, 7.5%);
        box-shadow: 0 0 0.5rem darken($brandColor4, 12.5%);
        color: darken($brandColor3, 10%);

        article:after {
            border-top-color: darken($brandColor4, 15%);
        }
    }
    .newsletterForm {
        background-color: darken($brandColor4, 7.5%);
        box-shadow: 0 0 0.5rem darken($brandColor4, 12.5%);
        color: darken($brandColor3, 10%);
        h3 { color: $brandColor2; }
    }
    .articleList h1 {
        border: 3px solid lighten($brandColor4, 50%);
    }

    article.single {
        h1 { border: 3px solid lighten($brandColor4, 50%); }
        h2, h3 { color: $brandColor2; }
    }

    .newsletterForm .newsletterFormFields input {
        background-color: darken($brandColor4, 5%);
        border-color: darken($brandColor4, 15%);
    }
    code { color: $brandColor2; }
    blockquote {
        background-color: darken($brandColor4, 18%);
        border-left: 0.5em solid darken($brandColor4, 5%);
        font-style: italic;
    }
}

.newsletterPageContainer {
    position: absolute;
    left: 0px;
    top: 2em;
    width: 100vw;
    min-height: calc(100vh - 4em);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    img#nicoZerpaLogo {
        display: block;
        margin-bottom: 2em;
    }
}

